[gd_scene load_steps=16 format=2]

[ext_resource path="res://redbutton.gd" type="Script" id=1]
[ext_resource path="res://greenbutton.gd" type="Script" id=2]
[ext_resource path="res://greater-than-sign-icon-36393.png" type="Texture" id=3]
[ext_resource path="res://Podium.tscn" type="PackedScene" id=4]
[ext_resource path="res://Garage.gd" type="Script" id=5]
[ext_resource path="res://White.material" type="Material" id=6]
[ext_resource path="res://selection swapping.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cars/SportsCar.tscn" type="PackedScene" id=8]
[ext_resource path="res://SUV.tscn" type="PackedScene" id=9]
[ext_resource path="res://selection swapping.gd" type="Script" id=10]
[ext_resource path="res://Loadscene.gd" type="Script" id=11]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="Animation" id=2]
resource_name = "index 1"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("green:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -300, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("red:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("yellow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -600, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Blue:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 300, 0 ) ]
}

[sub_resource type="ProceduralSky" id=3]

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 5 )

[node name="Podium" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 5.22684, -0.419079, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 6 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -17.923, 5.699, -4.019 )

[node name="Previous" type="Button" parent="."]
margin_left = 205.194
margin_top = 486.652
margin_right = 560.194
margin_bottom = 844.652
rect_scale = Vector2( -0.25, 0.25 )
icon = ExtResource( 3 )
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="Button" parent="."]
margin_left = 805.471
margin_top = 486.652
margin_right = 1160.47
margin_bottom = 844.652
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 3 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SUV" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -32 )

[node name="ChangingVehicles" type="Timer" parent="."]
wait_time = 5.0

[node name="Selection" parent="." instance=ExtResource( 7 )]
position = Vector2( 522.067, 534.539 )
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 10 )

[node name="AnimationPlayer" parent="Selection" index="4"]
"anims/index 1" = SubResource( 2 )

[node name="Loadscene" type="Button" parent="."]
margin_left = 379.523
margin_top = 16.0362
margin_right = 471.523
margin_bottom = 36.0362
text = "LOAD SCENE"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SportsCar" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -32 )

[node name="SportsCar" parent="SportsCar" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
exiting = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[connection signal="pressed" from="Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="timeout" from="ChangingVehicles" to="." method="_on_ChangingVehicles_timeout"]
[connection signal="pressed" from="Loadscene" to="Loadscene" method="_on_Loadscene_pressed"]

[editable path="SUV"]
[editable path="Selection"]
[editable path="SportsCar"]
